--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
         <li>Elemento 4</li>
         <li>Elemento 5</li>
 
+
+
+    </ul>
+
+    <ul>
+        <li>arriba</li>
+        <li>abajo</li>
+        <li>derecha</li>
+        <li>izquierda</li>
+        <li>girando</li>
     </ul>
     <p>hola</p>
     <p>sss</p>
