Agregando estaciones del año con fecha de inicio

--- a/index.html
+++ b/index.html
@@ -25,17 +25,14 @@
 
 
     </ul>
+    <ol>
+        <li>Primavera - 21 marzo</li>
+        <li>Verano - 21 junio</li>
+        <li>Otoño - 21 septiembre</li>
+        <li>Invierno - 21 diciembre</li>
+    </ol>
 
-    <ul>
-        <li>arriba</li>
-        <li>abajo</li>
-        <li>derecha</li>
-        <li>izquierda</li>
-        <li>girando</li>
-    </ul>
-    <p>hola</p>
-    <p>sss</p>
-    <p>jeje</p>
+    
     <script src="index.js"></script>
 
 </body>
