--- a/index.html
+++ b/index.html
@@ -25,17 +25,14 @@
 
 
     </ul>
+    <ol>
+        <li>Primavera</li>
+        <li>Verano</li>
+        <li>Otoño</li>
+        <li>Invierno</li>
+    </ol>
 
-    <ul>
-        <li>arriba</li>
-        <li>abajo</li>
-        <li>derecha</li>
-        <li>izquierda</li>
-        <li>girando</li>
-    </ul>
-    <p>hola</p>
-    <p>sss</p>
-    <p>jeje</p>
+    
     <script src="index.js"></script>
 
 </body>
