Agregando dos parrafos

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <li>Otoño - 21 septiembre</li>
         <li>Invierno - 21 diciembre</li>
     </ol>
-
-    
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima dignissimos voluptates inventore quidem ipsum accusamus ullam commodi assumenda quis qui fugiat reprehenderit dolorum aliquam aspernatur laudantium nisi, iure mollitia earum.</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima dignissimos voluptates inventore quidem ipsum accusamus ullam commodi assumenda quis qui fugiat reprehenderit dolorum aliquam aspernatur laudantium nisi, iure mollitia earum.</p>
     <script src="index.js"></script>
 
 </body>
