Agregando imagen de flujo GIT y poniendo chulo el index.html

--- a/index.html
+++ b/index.html
@@ -10,29 +10,12 @@
 <body>
     <h1>Aprendiendo Git</h1>
     <p>
-        Mis primeros pasos en el versionado y aprendiendo a resolver confictos entre ramas
+        Mis primeros pasos en el versionado de codigo con Git y Github
     </p>
-
-    <ul>
-
- 
-        <li>Elemento 1</li>
-        <li>Elemento 2</li>
-        <li>Elemento 3</li>
-        <li>Elemento 4</li>
-        <li>Elemento 5</li>
-
-
-
-    </ul>
-    <ol>
-        <li>Primavera - 21 marzo</li>
-        <li>Verano - 21 junio</li>
-        <li>Otoño - 21 septiembre</li>
-        <li>Invierno - 21 diciembre</li>
-    </ol>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima dignissimos voluptates inventore quidem ipsum accusamus ullam commodi assumenda quis qui fugiat reprehenderit dolorum aliquam aspernatur laudantium nisi, iure mollitia earum.</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima dignissimos voluptates inventore quidem ipsum accusamus ullam commodi assumenda quis qui fugiat reprehenderit dolorum aliquam aspernatur laudantium nisi, iure mollitia earum.</p>
+    <p>
+        Quieres dominar el uso de Git mira este  <a href="https://jonmircha.com/git" target="_blank">enlace</a>
+    </p>
+  <img src="git-flow.png" alt="Flujo basico de Git">
     <script src="index.js"></script>
 
 </body>
