nuevos cambios ya solucionados

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Aprendiendo Git</h1>
+    <h1>Aprendiendo Git desde cero y con jormircha asi es claro que si</h1>
     <p>
-        Mis primeros pasos en el versionado de codigo con Git y Github
+        Mis primerosssss pasos en el versionado de codigo con Git y Github con un breve cambio
     </p>
     <p>
         Quieres dominar el uso de Git mira este  <a href="https://jonmircha.com/git" target="_blank">enlace</a>
